# oh-no-my-claudecode

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  pyproject.toml
.agent-memory/: manifest.json
.agent-memory/compiled/: latest-brief.md
.agent-memory/memories/decision/: decision-0d0ca148f312.json  decision-10c5cba66177.json  decision-298573976d58.json  decision-ae1ba3936695.json  decision-bb62ad4ef20a.json
.agent-memory/memories/doc_fact/: doc_fact-06f1f5d61415.json  doc_fact-09f812948117.json  doc_fact-0bd0a4c6c298.json  doc_fact-0cf820c6bbbe.json  doc_fact-0fb0b62ee23f.json  doc_fact-138a51d0da0c.json  doc_fact-19579cdcaeb3.json  doc_fact-2700eb89dd96.json  doc_fact-281f81295c5f.json  doc_fact-329697eb7720.json  doc_fact-388c3c3f8a71.json  (+39 more)
.github/: CODEOWNERS  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent_integration.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml  security-audit.yml
docs/: agent-native-workflows.md  architecture.md  cli-reference.md  memory-model.md  prompt-compiler.md  roadmap.md  shipped-capabilities.md  task-lifecycle.md
examples/: brief-example.md
scripts/: generate-cli-reference.py
src/oh_no_my_claudecode/: __init__.py  __main__.py  api.py  cli.py  config.py
src/onmc/: __init__.py
tests/: conftest.py  test_api.py  test_attempts.py  test_brief.py  test_claude_md.py  test_cli.py  test_cold_start.py  test_doctor.py  test_e2e.py  test_github_miner.py  test_hooks.py  test_ingest.py  test_ingest_incremental.py  test_json_parsing.py  test_llm.py  test_llm_commands.py  test_llm_extractor.py  test_llm_ranker.py  test_llm_timeout.py  test_mcp.py  test_memory_artifacts.py  test_memory_feedback.py  test_mine.py  test_prompt_compiler.py  test_repo.py  test_setup_wizard.py  test_storage.py  test_sync.py  test_tasks.py  test_teach_interactive.py
(+85 files in other folders)
